# smart-hydroponic

./: CONTRIBUTING.md  mkdocs.yml
.github/workflows/: ci-backend.yml  docker-push-backend.yml  docker-push-frontend.yml  release-backend.yml  release-frontend.yml
backend/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  MAINTAINER_READINESS_RUBRIC.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  test_uuid.py
backend/config/: config.py  db.py
backend/middleware/: auth.py
backend/migrations/: env.py
backend/migrations/versions/: 3c2d9f7b8a11_add_token_version_to_user_data.py  5f70a1ebe4eb_fix_timestamp.py  649bba5d15fd_drop_3_unused_tables.py  9e7dcb87127f_init_tables.py  a11a457ed31c_alter_table_user.py  c6b1a3f4e2d7_add_active_flag_to_plant_nutrition_profiles.py  d131747a84b2_initial_tables.py  fd9352f3a55e_alter_avg_columns_name.py
backend/models/: __init__.py  actuator_data.py  environment_data.py  hydroponic.py  log.py  nutrition.py  plant_data.py  user.py
backend/repositories/: actuator_repo.py  environment_repo.py  hydroponic_repo.py  plant_repo.py  user_repo.py
backend/routes/: actuator_routes.py  coap_handler.py  environment_routes.py  hydroponic_routes.py  nutrition_routes.py  plant_routes.py  user_routes.py
backend/schemas/: __init__.py  actuator.py  environment.py  hydroponic.py  nutrition.py  plant.py  responses.py  user.py
backend/services/: actuator_service.py  environment_service.py  hydroponic_service.py  nutrition_service.py  sensor_service.py  user_service.py
backend/templates/: index.html  test_ws_actuator_data.html  test_ws_environment_data.html  test_ws_sensor_data.html
backend/test/: client_webscoket.py  coap_esp32_environment.py  coap_esp32_sensor.py  coap_esp8266.py  conftest.py  test_api_fastapi.py  test_api_fastapi_edge.py  test_auth_client.py  test_converter.py  test_esp32.py  test_esp32_environment.py  test_esp8266_environment.py
backend/utils/: aggregator.py  converter.py  crypto.py  deps.py  manager.py  serialization.py  superuser.py
docs/: index.md  semantic-release-backend-frontend-plan.md
docs/backend/: database_access.md  deploy.md  deploy_python.md  development.md  setup_database.md  setup_nginx.md
docs/frontend/: deploy.md
esp/esp32/DHTdanTDS/: DHTdanTDS.ino
esp/esp32/Program2_SensorpH_ESP32/: Program2_SensorpH_ESP32.ino
esp/esp32/sensor/: sensor.ino
esp/esp8266/aktuator/: aktuator.ino
esp/test_coap_2/: test_coap_2.ino
frontend-vue/: .releaserc.json  CHANGELOG.md  index.html  package-lock.json  package.json
frontend-vue/src/: App.vue  auth.ts  style.css
frontend-vue/src/api/: index.ts
(+41 files in other folders)
