[project]
name = "smart-hydroponic-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "authlib>=1.6.6",
    "fastapi[standard]>=0.128.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "websockets>=15.0.1",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "bcrypt>=5.0.0",
    "jinja2>=3.1.6",
    "aiocoap>=0.4.17",
]
